--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v1
     - name: Build
-      run: brew install ffmpeg && make
+      run: brew install ffmpeg && make build && make test
