--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     name: Setup, Build, Test
     strategy:
       matrix:
-        go-version: [1.12.x]
+        go-version: [1.13.x]
         platform: [macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -19,4 +19,4 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v1
     - name: Build
-      run: brew install ffmpeg && make build && make test
+      run: brew install ffmpeg && make build && make vet
