--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,34 +4,24 @@ on: [push, pull_request]
 
 
 jobs:
-  build-and-test-rust-lib:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        rust: [nightly]
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        rust-version: ${{ matrix.rust }}
-    - name: Build
-      run: cargo +nightly build --tests --verbose
-    - name: Run tests
-      run: cargo +nightly test --verbose
-  publish-crate-on-new-release:
-    name: "Publish crate on Release"
+  build-and-test-rust-library:
+    name: Build and test rust library
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: checkout source
+        uses: actions/checkout@v2
+      - name: install latest nightly
+        uses: actions-rs/toolchain@v1
         with:
-            toolchain: stable
-            override: true
-      - uses: katyo/publish-crates@v1
-        with:
-            registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-  setup-build-test:
-    name: Setup, Build, Test go source
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
+      - name: build and test
+        working-directory: ./pkg/download
+        run: |
+          cargo build --tests --verbose && cargo test --verbose
+  build-and-test-go-module:
+    name: Build and test go source
     strategy:
       matrix:
         go-version: [1.16.x, 1.17.x, 1.18.x]
