--- a/pkg/download/Cargo.toml
+++ b/pkg/download/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name            = "ydl"
 description     = "download youtube videos to path"
-version         = "0.1.1"
+version         = "0.3.0"
 authors         = ["Nyah Check <hello@nyah.dev>"]
 license         = "MIT"
 homepage        = "https://github.com/ch3ck"
@@ -24,6 +24,7 @@ panic               = "abort"
 [dependencies]
 clippy      = "0.0.302"
 env_logger  = "0.9.0"
+libc        = "0.2.112"
 log         = "0.4.14"
-rustube     = "0.3.6"
+rustube     = "0.3.7"
 tokio       = { version = "1.15.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
