--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,37 +2,19 @@ name: CI
 
 on: [push, pull_request]
 
-
 jobs:
-  build-and-test-rust-library:
-    name: Build and test rust library
+  build-and-test-go-module:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout source
-        uses: actions/checkout@v2
-      - name: install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-          components: rustfmt, clippy
-      - name: build and test
-        working-directory: ./pkg/download
-        run: cargo test --lib
-  build-and-test-go-module:
-    name: Build and test go source
-    strategy:
-      matrix:
-        go-version: [1.16.x, 1.17.x, 1.18.x]
-        platform: [macos-latest, ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - name: Install go
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: test build
+        go-version: 1.17
+
+    - name: Build
       run: go build -v ./...
 
+    - name: Test
+      run: go test -v ./...
