--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,3 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
   # Maintain dependencies for Go
@@ -11,8 +6,8 @@ updates:
     schedule:
       interval: "weekly"
 
-  # Maintain dependencies for build tools
-  - package-ecosystem: "gomod"
-    directory: "/tools"
+  # Maintain dependencies for Cargo
+  - package-ecosystem: "cargo"
+    directory: "/pkg"
     schedule:
       interval: "weekly"
